--- a/asyquote/static/sass/footer.scss
+++ b/asyquote/static/sass/footer.scss
@@ -50,3 +50,15 @@
   justify-content: space-evenly;
   display: flex;
 }
+
+.termos_class {
+  color: rgb(68, 68, 68);
+}
+
+.title-size {
+  font-size: 40px;
+}
+
+.gu {
+  font-size: 20px;
+}
