--- a/asyquote/templates/account/password_change.html
+++ b/asyquote/templates/account/password_change.html
@@ -1,12 +1,13 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
+{% load crispy_forms_filters %}
 
-{% load i18n %}
+{% load i18n static wagtailcore_tags wagtailimages_tags %}
 {% load crispy_forms_tags %}
 
 {% block head_title %}
   {% translate "Change Password" %}
 {% endblock head_title %}
-{% block inner %}
+{% block content %}
   <h1>{% translate "Change Password" %}</h1>
   <form method="post"
         action="{% url 'account_change_password' %}"
@@ -15,4 +16,4 @@
     {{ form|crispy }}
     <button class="btn btn-primary" type="submit" name="action">{% translate "Change Password" %}</button>
   </form>
-{% endblock inner %}
+{% endblock content %}
