--- a/asyquote/templates/account/password_reset_done.html
+++ b/asyquote/templates/account/password_reset_done.html
@@ -1,17 +1,17 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% load i18n static wagtailcore_tags wagtailimages_tags %}
 {% load account %}
 
 {% block head_title %}
-  {% translate "Password Reset" %}
+  {% translate "Redefinição password" %}
 {% endblock head_title %}
-{% block inner %}
-  <h1>{% translate "Password Reset" %}</h1>
+{% block content %}
+  <h1 class="mt3-h1">{% translate "Redifinição password" %}</h1>
   {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
   {% endif %}
-  <p>
-    {% blocktranslate %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}
+  <p class="verification-paragraph">
+    {% blocktranslate %}Enviamos um e-mail para si. Por favor siga as instruções do email!{% endblocktranslate %}
   </p>
-{% endblock inner %}
+{% endblock content %}
