--- a/asyquote/templates/components/footer/footer.html
+++ b/asyquote/templates/components/footer/footer.html
@@ -3,29 +3,22 @@
 <div class="container py-5 bb-footer">
   <div class="row w-100">
     <div class="col-12 col-md-4 text-center">
-      {% image self.logo width-200 as logo %}
-      <img src="{{ logo.url }}" alt="Logo AsyQuote" class="width-logo-footer img-fluid">
+      <img src="{% static 'images/logo.png' %}" alt="Logo AsyQuote" class="width-logo-footer img-fluid">
     </div>
     <div class="col-12 col-md-4 padding-left-footer">
-      <h1 class="footer_navigation_title">{{ self.footer_navigation_title }}</h1>
+      <h1 class="footer_navigation_title">{{ titles.footer_navigation_title }}</h1>
       <div class="navigation-links">
-        {% for nav in self.footer_navigation.all %}
-          {% if navigation_text_page %}
-            <a href="{{ nav.navigation_text_page }}" class="navigation-a">
-              <p>{{ nav.navigation_text }}</p>
+        {% for nav in navigation %}
+            <a href="{{ nav.pages_href }}" class="navigation-a">
+              <p>{{ nav.text_pages }}</p>
             </a>
-          {% else %}
-            <a href="{{ nav.navigation_text_url }}" class="navigation-a">
-              <p>{{ nav.navigation_text }}</p>
-            </a>
-          {% endif %}
         {% endfor %}
       </div>
     </div>
     <div class="col-12 col-md-4 padding-left-footer">
-      <h1 class="footer_navigation_title">{{ self.footer_contact_title }}</h1>
+      <h1 class="footer_navigation_title">{{ titles.footer_contact_title }}</h1>
       <div class="navigation-links">
-        {% for nav in self.footer_contact.all %}
+        {% for nav in contact %}
           {% image nav.information_image width-30 as info_image %}
           <div class="d-flex">
             <img src="{{ info_image.url }}" alt="{{ info_image_alt }}" class="img-fluid image_footer_contact">
@@ -42,12 +35,12 @@
 <div class="container">
   <div class="row w-100">
     <div class="col-12 col-md-6">
-      <p class="footer_rights">{{ self.copyright }}</p>
+      <p class="footer_rights">{{ titles.copyright }}</p>
     </div>
     <div class="col-12 col-md-6">
       <div class="align-additional">
-        {% for item in self.additional_information.all %}
-          <a href="#" class="href-additional">{{ item.additional_information_text }}</a>
+        {% for item in additional %}
+          <a href="../{{ item.additional_information_href }}" class="href-additional">{{ item.additional_information_text }}</a>
         {% endfor %}
       </div>
     </div>
