--- a/asyquote/templates/account/email_confirm.html
+++ b/asyquote/templates/account/email_confirm.html
@@ -4,24 +4,32 @@
 {% load account %}
 
 {% block head_title %}
-  {% translate "Confirm E-mail Address" %}
+  {% translate "Confirme o seu e-mail" %}
 {% endblock head_title %}
-{% block inner %}
-  <h1>{% translate "Confirm E-mail Address" %}</h1>
-  {% if confirmation %}
-    {% user_display confirmation.email_address.user as user_display %}
-    <p>
-      {% blocktranslate with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktranslate %}
-    </p>
-    <form method="post"
-          action="{% url 'account_confirm_email' confirmation.key %}">
-      {% csrf_token %}
-      <button class="btn btn-primary" type="submit">{% translate "Confirm" %}</button>
-    </form>
-  {% else %}
-    {% url 'account_email' as email_url %}
-    <p>
-      {% blocktranslate %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktranslate %}
-    </p>
-  {% endif %}
-{% endblock inner %}
+{% block content %}
+  <div class="container">
+    <div class="row w-100">
+      <h1 class="mt2-h1">{% translate "Confirme o seu e-mail" %}</h1>
+      {% if confirmation %}
+        {% user_display confirmation.email_address.user as user_display %}
+        <p class="verification-paragraph">
+          {% blocktranslate with confirmation.email_address.email as email %}Por favor confirme se
+            <a href="mailto:{{ email }}">{{ email }}</a> é o e-mail que quer registrar para o utilizador:
+            {{ user_display }}
+            {% endblocktranslate %}
+        </p>
+        <form method="post"
+              action="{% url 'account_confirm_email' confirmation.key %}">
+          {% csrf_token %}
+          <button class="btn btn-signin" type="submit">{% translate "Confirm" %}</button>
+        </form>
+      {% else %}
+        {% url 'account_email' as email_url %}
+        <p>
+          {% blocktranslate %}This e-mail confirmation link expired or is invalid. Please
+            <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktranslate %}
+        </p>
+      {% endif %}
+    </div>
+  </div>
+{% endblock content %}
