--- a/asyquote/templates/account/login.html
+++ b/asyquote/templates/account/login.html
@@ -1,4 +1,5 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters %}
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -7,46 +8,53 @@
 {% block head_title %}
   {% translate "Sign In" %}
 {% endblock head_title %}
-{% block inner %}
-  <h1>{% translate "Sign In" %}</h1>
-  {% get_providers as socialaccount_providers %}
-  {% if socialaccount_providers %}
-    <p>
-      {% translate "Please sign in with one of your existing third party accounts:" %}
-      {% if ACCOUNT_ALLOW_REGISTRATION %}
-        {% blocktranslate trimmed %}
-          Or, <a href="{{ signup_url }}">sign up</a>
-          for a {{ site_name }} account and sign in below:
-        {% endblocktranslate %}
+{% block content %}
+  <div class="container fitcontent2">
+    <div class="row w-100">
+      <h1 class="mt2-h1">Login</h1>
+      {% get_providers as socialaccount_providers %}
+      {% if socialaccount_providers %}
+        <p>
+          {% translate "Please sign in with one of your existing third party accounts:" %}
+          {% if ACCOUNT_ALLOW_REGISTRATION %}
+            {% blocktranslate trimmed %}
+              Or, <a href="{{ signup_url }}">sign up</a>
+              for a {{ site_name }} account and sign in below:
+            {% endblocktranslate %}
+          {% endif %}
+        </p>
+        <div class="socialaccount_ballot">
+          <ul class="socialaccount_providers">
+            {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+          </ul>
+          <div class="login-or">{% translate "or" %}</div>
+        </div>
+        {% include "socialaccount/snippets/login_extra.html" %}
+      {% else %}
       {% endif %}
-    </p>
-    <div class="socialaccount_ballot">
-      <ul class="socialaccount_providers">
-        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-      </ul>
-      <div class="login-or">{% translate "or" %}</div>
+      <form class="login" method="post" action="{% url 'account_login' %}">
+        {% csrf_token %}
+        {{ form|crispy }}
+        {% if redirect_field_value %}
+          <input type="hidden"
+                 name="{{ redirect_field_name }}"
+                 value="{{ redirect_field_value }}"/>
+        {% endif %}
+        <div class="additional-options">
+          <a class="button secondaryAction" href="{% url 'account_reset_password' %}">
+            {% translate "Forgot Password?" %}
+          </a>
+
+          <!-- Custom styling for "Remember me" -->
+          <div class="remember-me">
+            {{ form.remember }}
+            {{ form.remember.label_tag }}
+
+          </div>
+        </div>
+
+        <button class="primaryAction btn btn-signin" type="submit">{% translate "Sign In" %}</button>
+      </form>
     </div>
-    {% include "socialaccount/snippets/login_extra.html" %}
-  {% else %}
-    {% if ACCOUNT_ALLOW_REGISTRATION %}
-      <p>
-        {% blocktranslate trimmed %}
-          If you have not created an account yet, then please
-          <a href="{{ signup_url }}">sign up</a> first.
-        {% endblocktranslate %}
-      </p>
-    {% endif %}
-  {% endif %}
-  <form class="login" method="post" action="{% url 'account_login' %}">
-    {% csrf_token %}
-    {{ form|crispy }}
-    {% if redirect_field_value %}
-      <input type="hidden"
-             name="{{ redirect_field_name }}"
-             value="{{ redirect_field_value }}" />
-    {% endif %}
-    <a class="button secondaryAction"
-       href="{% url 'account_reset_password' %}">{% translate "Forgot Password?" %}</a>
-    <button class="primaryAction btn btn-primary" type="submit">{% translate "Sign In" %}</button>
-  </form>
-{% endblock inner %}
+  </div>
+{% endblock content %}
