--- a/asyquote/templates/account/password_reset.html
+++ b/asyquote/templates/account/password_reset.html
@@ -1,28 +1,32 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters %}
 
-{% load i18n %}
+{% load i18n static wagtailcore_tags wagtailimages_tags %}
 {% load account %}
 {% load crispy_forms_tags %}
 
 {% block head_title %}
-  {% translate "Password Reset" %}
+  {% translate "Refefinição password" %}
 {% endblock head_title %}
-{% block inner %}
-  <h1>{% translate "Password Reset" %}</h1>
-  {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-  {% endif %}
-  <p>
-    {% translate "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
-  </p>
-  <form method="post"
-        action="{% url 'account_reset_password' %}"
-        class="password_reset">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input class="btn btn-primary"
-           type="submit"
-           value="{% translate 'Reset My Password' %}" />
-  </form>
-  <p>{% blocktranslate %}Please contact us if you have any trouble resetting your password.{% endblocktranslate %}</p>
-{% endblock inner %}
+{% block content %}
+  <div class="container">
+    <div class="row w-100">
+      <h1 class="mt2-h1">{% translate "Password Reset" %}</h1>
+      {% if user.is_authenticated %}
+        {% include "account/snippets/already_logged_in.html" %}
+      {% endif %}
+      <p class="verification-paragraph">
+        {% translate "Esqueceu-se da password? Digite o seu e-mail em baixo, e enviaremos um e-mail que lhe permiterá mudá-la." %}
+      </p>
+      <form method="post"
+            action="{% url 'account_reset_password' %}"
+            class="password_reset">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input class="btn btn-signin2"
+               type="submit"
+               value="{% translate 'Redefinir password' %}"/>
+      </form>
+    </div>
+  </div>
+{% endblock content %}
