--- a/asyquote/templates/account/password_reset_from_key.html
+++ b/asyquote/templates/account/password_reset_from_key.html
@@ -1,36 +1,42 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters %}
 
-{% load i18n %}
+{% load i18n static wagtailcore_tags wagtailimages_tags %}
 {% load crispy_forms_tags %}
 
 {% block head_title %}
-  {% translate "Change Password" %}
+  {% translate "Alterar password" %}
 {% endblock head_title %}
-{% block inner %}
-  <h1>
-    {% if token_fail %}
-      {% translate "Bad Token" %}
-    {% else %}
-      {% translate "Change Password" %}
-    {% endif %}
-  </h1>
-  {% if token_fail %}
-    {% url 'account_reset_password' as passwd_reset_url %}
-    <p>
-      {% blocktranslate %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktranslate %}
-    </p>
-  {% else %}
-    {% if form %}
-      <form method="post" action=".">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-primary"
-               type="submit"
-               name="action"
-               value="{% translate 'change password' %}" />
-      </form>
-    {% else %}
-      <p>{% translate "Your password is now changed." %}</p>
-    {% endif %}
-  {% endif %}
-{% endblock inner %}
+{% block content %}
+  <div class="container">
+    <div class="row w-100">
+      <h1 class="mt3-h1">
+        {% if token_fail %}
+          {% translate "Bad Token" %}
+        {% else %}
+          {% translate "Alterar password" %}
+        {% endif %}
+      </h1>
+      {% if token_fail %}
+        {% url 'account_reset_password' as passwd_reset_url %}
+        <p>
+          {% blocktranslate %}O link para redefinir a password é inválido. Por favor peça um
+            <a href="{{ passwd_reset_url }}">novo link para ressetar a password</a>.{% endblocktranslate %}
+        </p>
+      {% else %}
+        {% if form %}
+          <form method="post" action=".">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <input class="btn btn-primary"
+                   type="submit"
+                   name="action"
+                   value="{% translate 'change password' %}"/>
+          </form>
+        {% else %}
+          <p>{% translate "Your password is now changed." %}</p>
+        {% endif %}
+      {% endif %}
+    </div>
+  </div>
+{% endblock content %}
