--- a/asyquote/templates/account/password_reset_from_key_done.html
+++ b/asyquote/templates/account/password_reset_from_key_done.html
@@ -1,11 +1,11 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
-{% load i18n %}
+{% load i18n static wagtailcore_tags wagtailimages_tags %}
 
 {% block head_title %}
   {% translate "Change Password" %}
 {% endblock head_title %}
-{% block inner %}
+{% block content %}
   <h1>{% translate "Change Password" %}</h1>
   <p>{% translate "Your password is now changed." %}</p>
-{% endblock inner %}
+{% endblock content %}
