--- a/asyquote/templates/account/password_set.html
+++ b/asyquote/templates/account/password_set.html
@@ -1,12 +1,13 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
+{% load crispy_forms_filters %}
 
-{% load i18n %}
+{% load i18n static wagtailcore_tags wagtailimages_tags %}
 {% load crispy_forms_tags %}
 
 {% block head_title %}
   {% translate "Set Password" %}
 {% endblock head_title %}
-{% block inner %}
+{% block content %}
   <h1>{% translate "Set Password" %}</h1>
   <form method="post"
         action="{% url 'account_set_password' %}"
@@ -18,4 +19,4 @@
            name="action"
            value="{% translate 'Set Password' %}" />
   </form>
-{% endblock inner %}
+{% endblock content %}
