--- a/asyquote/templates/account/signup.html
+++ b/asyquote/templates/account/signup.html
@@ -1,27 +1,31 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters static %}
 
-{% load i18n %}
+{% load i18n static wagtailcore_tags wagtailimages_tags %}
 {% load crispy_forms_tags %}
 
 {% block head_title %}
   {% translate "Signup" %}
 {% endblock head_title %}
-{% block inner %}
-  <h1>{% translate "Sign Up" %}</h1>
-  <p>
-    {% blocktranslate %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktranslate %}
-  </p>
-  <form class="signup"
-        id="signup_form"
-        method="post"
-        action="{% url 'account_signup' %}">
-    {% csrf_token %}
-    {{ form|crispy }}
-    {% if redirect_field_value %}
-      <input type="hidden"
-             name="{{ redirect_field_name }}"
-             value="{{ redirect_field_value }}" />
-    {% endif %}
-    <button class="btn btn-primary" type="submit">{% translate "Sign Up" %} »</button>
-  </form>
-{% endblock inner %}
+{% block content %}
+  <div class="container fitcontent">
+    <div class="row w-100">
+      <h1 class="mt-h1 text-center fw-bold mb-3">{% translate "Aceda Já à Fase Beta" %}</h1>
+      <form class="signup"
+            id="signup_form"
+            method="post"
+            action="{% url 'account_signup' %}">
+        {% csrf_token %}
+        {% for field in form %}
+          {{ field|as_crispy_field }}
+        {% endfor %}
+        {% if redirect_field_value %}
+          <input type="hidden"
+                 name="{{ redirect_field_name }}."
+                 value="{{ redirect_field_value }}"/>
+        {% endif %}
+        <button class="btn btn-signin" type="submit">{% translate "Submeter Candidatura" %}</button>
+      </form>
+    </div>
+  </div>
+{% endblock content %}
