--- a/asyquote/templates/components/navbar/navbar.html
+++ b/asyquote/templates/components/navbar/navbar.html
@@ -1,10 +1,10 @@
+{% load i18n %}
 {% load static wagtailimages_tags wagtailcore_tags menu_tags %}
 <div class="mb-1">
   <nav class="navbar navbar-expand-md navbar-light bg-white border-bottom py-3">
     <div class="container">
-      <a class="navbar-brand" href="">
-        {% image self.logo width-110 as logo %}
-        <img src="{{ logo.url }}" alt="Logo AsyQuote" class="imagem_nav">
+      <a class="navbar-brand" href="../../">
+        <img src="{% static 'images/logo.png' %}" alt="Logo AsyQuote" class="imagem_nav">
       </a>
       <button class="navbar-toggler navbar-toggler-right"
               type="button"
@@ -19,30 +19,30 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav align-items-baseline w-100 justify-content-end">
           {% main_menu template="components/navbar/items_nav.html" %}
-          {#            {% if request.user.is_authenticated %}#}
-          {#              <li class="nav-item">#}
-          {#                <a class="nav-link"#}
-          {#                   href="{% url 'users:detail' request.user.username %}">{% translate "My Profile" %}</a>#}
-          {#              </li>#}
-          {#              <li class="nav-item">#}
-          {# URL provided by django-allauth/account/urls.py #}
-          {#                <a class="nav-link" href="{% url 'account_logout' %}">{% translate "Sign Out" %}</a>#}
-          {#              </li>#}
-          {#            {% else %}#}
-          {#              {% if ACCOUNT_ALLOW_REGISTRATION %}#}
-          {#                <li class="nav-item">#}
-          {# URL provided by django-allauth/account/urls.py #}
-          {#                  <a id="sign-up-link" class="nav-link" href="{% url 'account_signup' %}">{% translate "Sign Up" %}</a>#}
-          {#                </li>#}
-          {#              {% endif %}#}
-          {#              <li class="nav-item">#}
-          {# URL provided by django-allauth/account/urls.py #}
-          {#                <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% translate "Sign In" %}</a>#}
-          {#              </li>#}
-          {#            {% endif %}#}
+{#          {% if request.user.is_authenticated %}#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link"#}
+{#                 href="{% url 'users:detail' request.user.username %}">{% translate "My Profile" %}</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              URL provided by django-allauth/account/urls.py#}
+{#              <a class="nav-link" href="{% url 'account_logout' %}">{% translate "Sign Out" %}</a>#}
+{#            </li>#}
+{#          {% else %}#}
+{#            {% if ACCOUNT_ALLOW_REGISTRATION %}#}
+{#              <li class="nav-item">#}
+{#                URL provided by django-allauth/account/urls.py#}
+{#                <a id="sign-up-link" class="nav-link" href="{% url 'account_signup' %}">{% translate "Sign Up" %}</a>#}
+{#              </li>#}
+{#            {% endif %}#}
+{#            <li class="nav-item">#}
+{#              URL provided by django-allauth/account/urls.py#}
+{#              <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% translate "Sign In" %}</a>#}
+{#            </li>#}
+{#          {% endif %}#}
 
           <li class="margin_nav">
-            <a href="../aceder-beta" class="nav-link button-nav">
+            <a href="{% url 'account_signup' %}" class="nav-link button-nav">
               Aceder Beta
             </a>
           </li>
