--- a/asyquote/static/css/project.css
+++ b/asyquote/static/css/project.css
@@ -14869,7 +14869,7 @@ body {
 }
 
 .card.card_products {
-  width: 320px;
+  width: 300px;
   cursor: pointer;
   margin-bottom: 30px;
   padding: 0 !important;
@@ -14885,7 +14885,12 @@ body {
 
 .image_cards_products {
   width: 100%;
-  height: 180px;
+  height: 250px;
+}
+
+.image_cards_add_products {
+  width: 100%;
+  height: 220px;
 }
 
 .font_family_products {
@@ -14928,6 +14933,15 @@ input[type=text],
 input[type=email],
 input[type=number],
 #id_state, .update_client_project, .update_state_project {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.selects-create-product select {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
@@ -15037,6 +15051,159 @@ input[type=number],
   width: 200px;
 }
 
+.add-filters-product button {
+  background: white;
+  width: 100%;
+  border: 0;
+  color: #62c6c8;
+}
+.add-filters-product button:hover {
+  text-decoration: underline;
+}
+
+.add-filters-product-2 button {
+  background: white;
+  width: 100%;
+  border: 0;
+  color: black;
+}
+.add-filters-product-2 button:hover {
+  text-decoration: underline;
+}
+
+.margin-left-row-products {
+  margin-left: 1%;
+}
+
+.product-info-modal .product-image-info {
+  width: 500px;
+}
+.product-info-modal h3, .product-info-modal .h3 {
+  font-family: "Source Sans Pro", sans-serif;
+}
+.product-info-modal .stores-info-product {
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 5px;
+  height: 80px;
+  height: 5rem;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.supplier-info .supplier-link {
+  background-color: #71eaec;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round, sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-transition: -webkit-filter 0.2s;
+  transition: -webkit-filter 0.2s;
+  transition: filter 0.2s;
+  transition: filter 0.2s, -webkit-filter 0.2s;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 100%;
+}
+.supplier-info .supplier-link:after {
+  background-clip: padding-box;
+  background-color: #63ccce;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+.supplier-info .supplier-link:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+.supplier-info .supplier-link:disabled {
+  cursor: auto;
+}
+.supplier-info .supplier-link:active {
+  border-width: 4px 0 0;
+  background: none;
+}
+.supplier-info a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+}
+
+.editor_mode input[type=checkbox] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+.editor_mode label {
+  cursor: pointer;
+  width: 80px;
+  height: 35px;
+  background: grey;
+  border-radius: 100px;
+  position: relative;
+}
+.editor_mode label:after {
+  content: "E";
+  text-align: center;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 25px;
+  height: 25px;
+  background: #fff;
+  border-radius: 90px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.editor_mode input:checked + label {
+  background: #62c6c8;
+}
+.editor_mode input:checked + label:after {
+  left: calc(100% - 5px);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+.editor_mode label:active:after {
+  width: 40px;
+}
+
+.excel_upload i {
+  font-size: 128px;
+  font-size: 8rem;
+}
+
 .page_404 {
   padding: 40px 0;
   background: #fff;
@@ -15114,7 +15281,7 @@ input[type=number],
   opacity: 0;
 }
 
-.custom-file-label {
+.custom-file-label, .custom-file-label-supplier {
   position: absolute;
   top: 0;
   right: 0;
@@ -15132,13 +15299,6 @@ input[type=number],
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-}
-
-.custom-file-input:focus ~ .custom-file-label,
-.custom-file-input.has-focus ~ .custom-file-label {
-  border-color: #80bdff;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 .color-cobrado {
